# saidino_admin

./: README.md  pyproject.toml  read.txt
app/: __init__.py
app/controllers/: default.py
app/models/: tables.py
app/templates/: base.html
